add rating feature, remove labels, update backend URL

--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
 
   <!--  JavaScript Files-->
   <script src="../js/navbar.js" defer></script>
-  <script src="../js/Products.js" defer></script>
+  <script src="../js/Product.js" defer></script>
   <script src="../js/productCard.js" defer></script>
   <script src="../js/addToCart.js" defer></script>
   <script src="../js/formFlip.js" defer></script>
