--- a/pages/product.html
+++ b/pages/product.html
@@ -28,7 +28,7 @@
 
   <!--  JavaScript Files-->
   <script type="module" src="../js/navbar.js" defer></script>
-  <script type="module" src="../js/Products.js" defer></script>
+  <script type="module" src="../js/Product.js" defer></script>
   <script type="module" src="../js/productCard.js" defer></script>
   <script type="module" src="../js/addToCart.js" defer></script>
   <script type="module" src="../js/formFlip.js" defer></script>
